# sunspot_js

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
bench/: bench.js  compare.mjs  index.html  package-lock.json  package.json  runner.mjs  serve.mjs  server.mjs
js/: README.md  package.json  tsconfig.json
js/scripts/: build-wasm.sh
js/src/: _init.ts  _probe_features.ts  index.ts  noir.ts  simd-mt.ts  simd-st.ts  sisd-mt.ts  sisd-st.ts
src/: bench.rs  curve.rs  error.rs  lib.rs  parsing.rs  pedersen_commitments.rs  prover.rs  solver.rs  types.rs  wasm.rs
src/curve/: fft.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mixed_add.rs  msm.rs  simd.rs
src/curve/lazy/: fp.rs  lazy_mont_config.rs  limb_ops.rs  mod.rs  tests.rs
src/curve/mixed_add/: fq_arith.rs  g1_mixed_add.rs  g2_mixed_add.rs  generic_mixed_add.rs  limb_ops.rs
src/parsing/: decode_intcomp.rs  error.rs  gnark_witness.rs  pk.rs  pk_streaming.rs  r1cs.rs  utils.rs
src/prover/: compute_h.rs  error.rs  msm.rs
src/solver/: cursor.rs  error.rs  linear_expr.rs  lookup.rs  r1c.rs  state.rs
src/solver/hints/: bigint.rs  bitwise.rs  bsb22.rs  count.rs  decompose.rs  eisenstein_integers.rs  emulated_div.rs  emulated_mul.rs  emulated_shared.rs  error.rs  fields_bn254.rs  glv_lattice.rs  grumpkin_decompose.rs  grumpkin_split.rs  inv_zero.rs  lookup.rs  mod.rs  n_bits.rs  partition.rs  poly_mv.rs  randomize.rs  split_to_64.rs  sw_decompose_scalar.rs  sw_half_gcd.rs  sw_half_gcd_eisenstein.rs  sw_scalar_mul.rs  to_bytes.rs
src/types/: gnark_witness.rs  pk.rs  proof.rs  r1cs.rs
tests/: gen_test_data.sh  mod.rs
tests/curve/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs  msm.rs
tests/noir_projects/aes128encrypt/: Nargo.toml  Prover.toml
tests/noir_projects/aes128encrypt/src/: main.nr
tests/noir_projects/and/: Nargo.toml  Prover.toml
tests/noir_projects/and/src/: main.nr
tests/noir_projects/blake2s/: Nargo.toml  Prover.toml
tests/noir_projects/blake2s/src/: main.nr
tests/noir_projects/blake3/: Nargo.toml  Prover.toml
tests/noir_projects/blake3/src/: main.nr
tests/noir_projects/ecdsa_secp256k1/: Nargo.toml  Prover.toml
tests/noir_projects/ecdsa_secp256k1/src/: main.nr
tests/noir_projects/ecdsa_secp256r1/: Nargo.toml  Prover.toml
tests/noir_projects/ecdsa_secp256r1/src/: main.nr
tests/noir_projects/embedded_curve_add/: Nargo.toml  Prover.toml
tests/noir_projects/embedded_curve_add/src/: main.nr
tests/noir_projects/keccak256/: Nargo.toml  Prover.toml
tests/noir_projects/keccak256/src/: main.nr
tests/noir_projects/keccak_f1600/: Nargo.toml  Prover.toml
tests/noir_projects/keccak_f1600/src/: main.nr
tests/noir_projects/memory/: Nargo.toml  Prover.toml
tests/noir_projects/memory/src/: main.nr
tests/noir_projects/multiscalar_multiplication/: Nargo.toml  Prover.toml
tests/noir_projects/multiscalar_multiplication/src/: main.nr
tests/noir_projects/passport_like/: Nargo.toml  Prover.toml
tests/noir_projects/passport_like/src/: main.nr
tests/noir_projects/polynomial/: Nargo.toml  Prover.toml
tests/noir_projects/polynomial/src/: main.nr
tests/noir_projects/poseidon2/: Prover.toml
tests/noir_projects/poseidon2/src/: main.nr
tests/noir_projects/range/: Nargo.toml  Prover.toml
tests/noir_projects/range/src/: main.nr
tests/noir_projects/recursive_aggregation/: Nargo.toml  Prover.toml
tests/noir_projects/recursive_aggregation/src/: main.nr
tests/noir_projects/sha256_hash/: Nargo.toml  Prover.toml
tests/noir_projects/sha256_hash/src/: main.nr
tests/noir_projects/sum_a_b/: Nargo.toml  Prover.toml
tests/noir_projects/sum_a_b/src/: main.nr
tests/noir_projects/xor/: Nargo.toml  Prover.toml
tests/noir_projects/xor/src/: main.nr
tests/parsing/: gnark_witness.rs  mod.rs  proving_key.rs  r1cs.rs
tests/proving/: mod.rs
tests/solving/: generic_r1c.rs  hints.rs  mod.rs
