[package]
name = "sunspot_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
bench = ["dep:web-sys"]

[dependencies]
acir = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.18", features = ["bn254"] }

ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }

base64 = "0.22"
byteorder = "1.5"
ciborium = "0.2"
rand = "0.8"
rayon = "1.10"
ruint = "1"
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
thiserror = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", optional = true, features = ["Performance", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = "1.2"
