[package]
name = "sunspot_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
bench = ["dep:web-sys"]

[dependencies]
acir = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.18", features = ["bn254"] }


ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.5", default-features = false, features = ["parallel"] }
ark-grumpkin = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false, features = ["parallel"] }
ark-secp256k1 = { version = "0.5", default-features = false }
ark-secp256r1 = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false, features = ["parallel"] }

base64 = "0.22"
byteorder = "1.5"
ciborium = "0.2"
crypto-bigint = "0.7"
rand = "0.8"
rayon = "1.10"
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
thiserror = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", optional = true, features = ["Performance", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = "1.2"

#Gated to non-wasm targets so wasm builds don't drag in the Solana toolchain.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "3a260eb" }

# Release profile tuned for in-browser proving
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-threads",
    "--enable-simd",
]
